# ecommerce-voice-agent

./: .env  README.md  agent.py  ecommerce_data.db  ecommerce_server.py  policies.txt  pyproject.toml  requirements.txt
agent-starter-react/: app-config.ts  package-lock.json
agent-starter-react/app/api/token/: route.ts
chroma_db/: chroma.sqlite3
